test/scope9.l1.out
scope9.l1:5: warning: reference to unbound variable: unboundvar
error: reference to unbound variable: unboundvar
	#0                     foo	(scope9.l1:5)
	#1                   entry	(scope9.l1:15)
